# michel-bot

./: CHANGELOG.md  Cargo.toml  README.md
src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  matrix.rs  seerr_client.rs
tests/bdd/: main.rs  world.rs
tests/bdd/steps/: seerr_issues.rs
tests/features/: seerr_issues.feature
