[package]
name = "michel-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = "0.16"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
cucumber = { version = "0.22", features = ["libtest"] }
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
wiremock = "0.6"
awaitility = "0.4"

[[test]]
name = "bdd"
harness = false
